cmake_minimum_required(VERSION 3.14)

add_subdirectory(ABitmapClass)
add_subdirectory(AbstractClasses)
add_subdirectory(AComplexNumberClass)
add_subdirectory(AMandelbrotClass)
add_subdirectory(AnRGBClass)
add_subdirectory(ApplyingtheZoom)
add_subdirectory(AutoPointers)
add_subdirectory(AZoomClass)
add_subdirectory(BasicExceptions)
add_subdirectory(BinaryFiles)
add_subdirectory(Bind)
add_subdirectory(BitmapFileHeaders)
add_subdirectory(BitmapHeaderValues)
add_subdirectory(BitmapInfoHeaders)
add_subdirectory(BitmapMemory)
add_subdirectory(CalculatingRangeTotals)
add_subdirectory(CapturingThisWithLambdas)
add_subdirectory(CatchingSubclassExceptions)
add_subdirectory(CenteringandScaling)
add_subdirectory(CheckingtheRangeTotals)
add_subdirectory(ColorTransforms)
add_subdirectory(ColourHistograms)
add_subdirectory(ConstructorsandMemory)
add_subdirectory(CustomExceptions)
add_subdirectory(CustomObjectsAsMapKeys)
add_subdirectory(CustomObjectsAsMapValues)
add_subdirectory(DecltypeAndTypeid)
add_subdirectory(DelegatingConctructors)
add_subdirectory(DynamicCasts)
add_subdirectory(EliminatingMaxIterations)
add_subdirectory(ElisionandOptimization)
add_subdirectory(EnhancedForLoop)
add_subdirectory(FractalCreatorHelloWorld)
add_subdirectory(FunctionalTypes)
add_subdirectory(FunctionPointers)
add_subdirectory(Functors)
add_subdirectory(GettingPixelRanges)
add_subdirectory(HelloWorld)
add_subdirectory(ImplementingFractalCreator)
add_subdirectory(ImprovingtheBasicFractal)
add_subdirectory(InitializationInC11)
add_subdirectory(InitializationInC98)
add_subdirectory(InitializerLists)
add_subdirectory(IterableClasses)
add_subdirectory(LambdaCaptureExpressions)
add_subdirectory(LambdaExpressions)
add_subdirectory(LambdaParametersAndReturnTypes)
add_subdirectory(Lists)
add_subdirectory(LValueReferences)
add_subdirectory(lValuesandrValues)
add_subdirectory(Maps)
add_subdirectory(MoveAssignmentOperators)
add_subdirectory(MoveConstructors)
add_subdirectory(MultipleInheritance)
add_subdirectory(MutableLambdas)
add_subdirectory(NestedTemplateClasses)
add_subdirectory(ObjectInitialization)
add_subdirectory(ObjectSlicingandPolymorphism)
add_subdirectory(OverloadingComparisonOperators)
add_subdirectory(OverloadingPlus)
add_subdirectory(OverloadingtheAssignmentOperator)
add_subdirectory(OverloadingtheDereferenceOperator)
add_subdirectory(OverloadingtheInsertionOperatorforPrinting)
add_subdirectory(OverloadingtheLeftBitShiftOperator)
add_subdirectory(ParsingTextinFiles)
add_subdirectory(PerfectForwarding)
add_subdirectory(RangeBasedColoring)
add_subdirectory(ReadingandWritingBinaryFiles)
add_subdirectory(ReadingTextFiles)
add_subdirectory(ReinterpretCast)
add_subdirectory(ReorganisingMain)
add_subdirectory(RingBuffer)
add_subdirectory(RvalueReferences)
add_subdirectory(Scaling)
add_subdirectory(SettingPixels)
add_subdirectory(SharedPointers)
add_subdirectory(SortingVectorsDequeFriend)
add_subdirectory(SpecifyingColorRanges)
add_subdirectory(StacksAndQueues)
add_subdirectory(StandardExceptions)
add_subdirectory(StaticCast)
add_subdirectory(StlComplexDataTypes)
add_subdirectory(StoringIterations)
add_subdirectory(StructPadding)
add_subdirectory(TemplateClasses)
add_subdirectory(TemplateFunctions1)
add_subdirectory(TemplateFunctionsandTypeInference)
add_subdirectory(TheAutoKeyword)
add_subdirectory(TheFractalAlgorithm)
add_subdirectory(TheZoomList)
add_subdirectory(TwoDimensionalVectors)
add_subdirectory(UsingFunctionPointersAnExample)
add_subdirectory(UsingtheHistogram)
add_subdirectory(UsingtheRGBClass)
add_subdirectory(ValidatingtheHistogram)
add_subdirectory(Vectors)
add_subdirectory(VectorsAndMemory)
add_subdirectory(WritingABitmap)
add_subdirectory(WritingTextFiles)
add_subdirectory(ZoomingIn)