cmake_minimum_required(VERSION 3.14)

add_subdirectory(src/ABitmapClass)
add_subdirectory(src/AbstractClasses)
add_subdirectory(src/AComplexNumberClass)
add_subdirectory(src/AMandelbrotClass)
add_subdirectory(src/AnRGBClass)
add_subdirectory(src/ApplyingtheZoom)
add_subdirectory(src/AutoPointers)
add_subdirectory(src/AZoomClass)
add_subdirectory(src/BasicExceptions)
add_subdirectory(src/BinaryFiles)
add_subdirectory(src/Bind)
add_subdirectory(src/BitmapFileHeaders)
add_subdirectory(src/BitmapHeaderValues)
add_subdirectory(src/BitmapInfoHeaders)
add_subdirectory(src/BitmapMemory)
add_subdirectory(src/CalculatingRangeTotals)
add_subdirectory(src/CapturingThisWithLambdas)
add_subdirectory(src/CatchingSubclassExceptions)
add_subdirectory(src/CenteringandScaling)
add_subdirectory(src/CheckingtheRangeTotals)
add_subdirectory(src/ColorTransforms)
add_subdirectory(src/ColourHistograms)
add_subdirectory(src/ConstructorsandMemory)
add_subdirectory(src/CustomExceptions)
add_subdirectory(src/CustomObjectsAsMapKeys)
add_subdirectory(src/CustomObjectsAsMapValues)
add_subdirectory(src/DecltypeAndTypeid)
add_subdirectory(src/DelegatingConctructors)
add_subdirectory(src/DynamicCasts)
add_subdirectory(src/EliminatingMaxIterations)
add_subdirectory(src/ElisionandOptimization)
add_subdirectory(src/EnhancedForLoop)
add_subdirectory(src/FractalCreatorHelloWorld)
add_subdirectory(src/FunctionalTypes)
add_subdirectory(src/FunctionPointers)
add_subdirectory(src/Functors)
add_subdirectory(src/GettingPixelRanges)
add_subdirectory(src/HelloWorld)
add_subdirectory(src/ImplementingFractalCreator)
add_subdirectory(src/ImprovingtheBasicFractal)
add_subdirectory(src/InitializationInC11)
add_subdirectory(src/InitializationInC98)
add_subdirectory(src/InitializerLists)
add_subdirectory(src/IterableClasses)
add_subdirectory(src/LambdaCaptureExpressions)
add_subdirectory(src/LambdaExpressions)
add_subdirectory(src/LambdaParametersAndReturnTypes)
add_subdirectory(src/Lists)
add_subdirectory(src/LValueReferences)
add_subdirectory(src/lValuesandrValues)
add_subdirectory(src/Maps)
add_subdirectory(src/MoveAssignmentOperators)
add_subdirectory(src/MoveConstructors)
add_subdirectory(src/MultipleInheritance)
add_subdirectory(src/MutableLambdas)
add_subdirectory(src/NestedTemplateClasses)
add_subdirectory(src/ObjectInitialization)
add_subdirectory(src/ObjectSlicingandPolymorphism)
add_subdirectory(src/OverloadingComparisonOperators)
add_subdirectory(src/OverloadingPlus)
add_subdirectory(src/OverloadingtheAssignmentOperator)
add_subdirectory(src/OverloadingtheDereferenceOperator)
add_subdirectory(src/OverloadingtheInsertionOperatorforPrinting)
add_subdirectory(src/OverloadingtheLeftBitShiftOperator)
add_subdirectory(src/ParsingTextinFiles)
add_subdirectory(src/PerfectForwarding)
add_subdirectory(src/RangeBasedColoring)
add_subdirectory(src/ReadingandWritingBinaryFiles)
add_subdirectory(src/ReadingTextFiles)
add_subdirectory(src/ReinterpretCast)
add_subdirectory(src/ReorganisingMain)
add_subdirectory(src/RingBuffer)
add_subdirectory(src/RvalueReferences)
add_subdirectory(src/Scaling)
add_subdirectory(src/SettingPixels)
add_subdirectory(src/SharedPointers)
add_subdirectory(src/SortingVectorsDequeFriend)
add_subdirectory(src/SpecifyingColorRanges)
add_subdirectory(src/StacksAndQueues)
add_subdirectory(src/StandardExceptions)
add_subdirectory(src/StaticCast)
add_subdirectory(src/StlComplexDataTypes)
add_subdirectory(src/StoringIterations)
add_subdirectory(src/StructPadding)
add_subdirectory(src/TemplateClasses)
add_subdirectory(src/TemplateFunctions1)
add_subdirectory(src/TemplateFunctionsandTypeInference)
add_subdirectory(src/TheAutoKeyword)
add_subdirectory(src/TheFractalAlgorithm)
add_subdirectory(src/TheZoomList)
add_subdirectory(src/TwoDimensionalVectors)
add_subdirectory(src/UsingFunctionPointersAnExample)
add_subdirectory(src/UsingtheHistogram)
add_subdirectory(src/UsingtheRGBClass)
add_subdirectory(src/ValidatingtheHistogram)
add_subdirectory(src/Vectors)
add_subdirectory(src/VectorsAndMemory)
add_subdirectory(src/WritingABitmap)
add_subdirectory(src/WritingTextFiles)
add_subdirectory(src/ZoomingIn)